--- a/.gitignore
+++ b/.gitignore
@@ -1,95 +1,12 @@
-# .NET Core specific
-bin/
-obj/
-out/
+﻿################################################################################
+# This .gitignore file was automatically created by Microsoft(R) Visual Studio.
+################################################################################
 
-# VS Code
-.vscode/
-*.code-workspace
-
-# User-specific files
-*.rsuser
-*.suo
-*.user
-*.userosscache
-*.sln.docstates
-
-# Mono Auto Generated Files
-mono_crash.*
-
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
-
-# Folder config file
-Desktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# Exclude .NET user secrets
-secrets.json
-
-# ASP.NET Scaffolding
-ScaffoldingReadMe.txt
-
-# DotNet CLI specific files
-.dotnet/
-
-# Web config files
-appsettings.Development.json
-appsettings.Production.json
-
-# Local History for Visual Studio and Rider
-.idea/
-.history/
-
-# Node.js dependencies (if using front-end code like Angular/React)
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# macOS
-.DS_Store
-
-# Logs
-logs/
-*.log
-
-# Visual Studio Code files
-.vscode/
-
-# Rider files
-.idea/
-
-# Azure Functions local settings file
-local.settings.json
-
-# Resharper
-*.DotSettings.user
-resharper.log
-_ReSharper*/ 
-
-# npm packages
-node_modules/
-
-# Uncomment if using Visual Studio 2022
-# .vs/
-
-# Uncomment if using Visual Studio for Mac
-# .vscode/
-/wwwroot/uploads
-/.vs/AngularEcommerceApp
-/.vs/my_Ecom_dotnet/v17
-/.vs/ProjectEvaluation
-/.vs/VSWorkspaceState.json
+/Infra/bin/Debug/net8.0
+/Infra/obj
+/Middleware/bin/Debug/net8.0
+/Middleware/obj
+/Services/bin/Debug/net8.0
+/Services/obj
+/Shared/bin/Debug/net8.0
+/Shared/obj
