--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@
 /Services/obj
 /Shared/bin/Debug/net8.0
 /Shared/obj
+/My_Ecom_Dotnet/wwwroot/uploads
+/.vs/AngularEcommerceApp
+/.vs/my_Ecom_proj/v17
+/.vs/ProjectEvaluation
+*.json
+/My_Ecom_Dotnet/obj
